# django-htcpcp-tea

./: .coveragerc  .gitignore  .old.travis.yml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  runtests.py  setup.py
django_htcpcp_tea/: __init__.py  admin.py  apps.py  decorators.py  middleware.py  models.py  settings.py  urls.py  utils.py  views.py
django_htcpcp_tea/fixtures/: demo_forbidden_combinations.json  demo_pots.json  rfc_7168_additions.json  rfc_7168_teas.json
django_htcpcp_tea/fixutres/: demo_pots.json  rfc_2324_additions.json
django_htcpcp_tea/migrations/: 0001_initial.py  0002_auto_20190619_1041.py  0003_auto_20190620_1205.py  0004_addition_type.py  0005_forbiddencombination.py
django_htcpcp_tea/templates/django_htcpcp_tea/: 400.html  403.html  406.html  418.html  503.html  base.html  base_beverage.html  base_error.html  brew_coffee.html  brew_tea.html  brewing.html  finished.html  options.html  pouring.html
django_htcpcp_tea/templates/django_htcpcp_tea/includes/: additions.html  alternatives.html
docs/: api.rst  changelog.rst  conf.py  config.rst  examples.rst  index.rst  install.rst
samples/project/: db.sqlite3  manage.py
samples/project/test_project/: settings.py  urls.py
samples/requests/: brew-index.http  brew-pot-1-start.http  brew-pot-1-stop.http  htcpcp_pot-1.http  htcpcp_pot-1.txt  root.txt  when.txt
tests/: settings.py  test_admin.py  test_decorators.py  test_middleware.py  test_models.py  test_utils.py  test_views.py  utils.py
